cmake_minimum_required(VERSION 3.6)
project(hpcrun)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    cct/cct.c
    cct/cct.h
    cct/cct_addr.h
    cct/cct_bundle.c
    cct/cct_bundle.h
    cct/cct_ctxt.c
    cct/cct_ctxt.h
    cct/cct_dump.h
    fnbounds/client.h
    fnbounds/fnbounds_client.c
    fnbounds/fnbounds_common.c
    fnbounds/fnbounds_dynamic.c
    fnbounds/fnbounds_file_header.h
    fnbounds/fnbounds_interface.h
    fnbounds/fnbounds_static.c
    fnbounds/fnbounds_table_interface.h
    lush/lush-backtrace.c
    lush/lush-backtrace.h
    lush/lush-pthread.c
    lush/lush-pthread.h
    lush/lush-pthread.i
    lush/lush-support-rt.c
    lush/lush-support-rt.h
    lush/lush.c
    lush/lush.h
    lush/lushi-cb.c
    lush/lushi-cb.h
    lush/lushi.h
    lush-agents/agent-cilk.c
    lush-agents/agent-cilk.h
    lush-agents/agent-pthread.c
    lush-agents/agent-pthread.h
    lush-agents/agent-tbb.c
    lush-agents/agent-tbb.h
    memory/hpcrun-malloc.h
    memory/mem.c
    memory/mem_const.h
    memory/mem_error_dbg.h
    memory/mmap.c
    memory/mmap.h
    memory/newmem.h
    memory/valgrind.h
    messages/debug-flag.c
    messages/debug-flag.h
    messages/fmt.c
    messages/fmt.h
    messages/messages-async.c
    messages/messages-sync.c
    messages/messages.h
    messages/messages.i
    monitor-exts/monitor_ext.h
    monitor-exts/openmp.c
    monitor-exts/overrides.h
    ompt/ompt-callback.h
    ompt/ompt-callstack.c
    ompt/ompt-callstack.h
    ompt/ompt-defer-write.c
    ompt/ompt-defer-write.h
    ompt/ompt-defer.c
    ompt/ompt-defer.h
    ompt/ompt-interface.c
    ompt/ompt-interface.h
    ompt/ompt-region-map.c
    ompt/ompt-region-map.h
    ompt/ompt-region.c
    ompt/ompt-region.h
    ompt/ompt-state-placeholders.c
    ompt/ompt-state-placeholders.h
    ompt/ompt-task-map.c
    ompt/ompt-task-map.h
    ompt/ompt-task.c
    ompt/ompt-task.h
    ompt/ompt-thread.c
    ompt/ompt-thread.h
    ompt/ompt.h
    ompt/ppc64-gnu-omp.h
    ompt/x86-gnu-omp.h
    os/catamount/gethostid.c
    os/catamount/interface.c
    os/catamount/MPI_Init.c
    os/catamount/override.c
    os/linux/dylib.c
    os/linux/dylib.h
    os/stubs/dumpmodules.c
    os/stubs/libcinit.c
    os/tru64/alpha_debug.c
    plugins/ibm-xlomp-wrappers.c
    sample-sources/blame-shift/blame-map.c
    sample-sources/blame-shift/blame-map.h
    sample-sources/blame-shift/blame-sample-source.h
    sample-sources/blame-shift/blame-shift.c
    sample-sources/blame-shift/blame-shift.h
    sample-sources/blame-shift/directed.c
    sample-sources/blame-shift/directed.h
    sample-sources/blame-shift/metric_info.h
    sample-sources/blame-shift/undirected.c
    sample-sources/blame-shift/undirected.h
    sample-sources/common-method-def.h
    sample-sources/common.c
    sample-sources/common.h
    sample-sources/cuda.c
    sample-sources/cuda_driver_dummy.c
    sample-sources/cuda_runtime_dummy.c
    sample-sources/ga-overrides.c
    sample-sources/ga.c
    sample-sources/ga.h
    sample-sources/generic.c
    sample-sources/gpu_blame-overrides.c
    sample-sources/gpu_blame.c
    sample-sources/gpu_blame.h
    sample-sources/gpu_ctxt_actions.c
    sample-sources/gpu_ctxt_actions.h
    sample-sources/idle.c
    sample-sources/idle.h
    sample-sources/io-over.c
    sample-sources/io.c
    sample-sources/io.h
    sample-sources/itimer.c
    sample-sources/itimer.h
    sample-sources/memleak-overrides.c
    sample-sources/memleak.c
    sample-sources/memleak.h
    sample-sources/mpi.c
    sample-sources/none.c
    sample-sources/none.h
    sample-sources/omp-idle.c
    sample-sources/omp-mutex.c
    sample-sources/papi-c-cupti.c
    sample-sources/papi-c-extended-info.c
    sample-sources/papi-c-extended-info.h
    sample-sources/papi-c.c
    sample-sources/papi-c.h
    sample-sources/papi.c
    sample-sources/pthread-blame-overrides.c
    sample-sources/pthread-blame.c
    sample-sources/pthread-blame.h
    sample-sources/retcnt.c
    sample-sources/retcnt.h
    sample-sources/sample-filters.c
    sample-sources/sample-filters.h
    sample-sources/sample_source.c
    sample-sources/sample_source_obj.h
    sample-sources/simple_oo.h
    sample-sources/ss-obj-name.h
    sample-sources/ss_obj.h
    sample-sources/sync.c
    sample-sources/tst.c
    sample-sources/upc.c
    sampling/types/callstack/trampoline/cache.c
    sampling/types/synchronous/synchprof.c
    sampling/types/synchronous/synchronous.h
    trampoline/common/trampoline.c
    trampoline/common/trampoline.h
    unwind/common/backtrace-lite.c
    unwind/common/backtrace.c
    unwind/common/backtrace.h
    unwind/common/backtrace_info.h
    unwind/common/dbg_backtrace.h
    unwind/common/default_validation_summary.c
    unwind/common/fence_enum.h
    unwind/common/interval-interface.h
    unwind/common/mem_error_gen.h
    unwind/common/splay-interval.h
    unwind/common/splay.c
    unwind/common/splay.h
    unwind/common/stack_troll.c
    unwind/common/stack_troll.h
    unwind/common/std_unw_cursor.h
    unwind/common/ui_tree.c
    unwind/common/ui_tree.h
    unwind/common/unw-datatypes.h
    unwind/common/unw-throw.c
    unwind/common/unw-throw.h
    unwind/common/unwind-cfg.h
    unwind/common/unwind.h
    unwind/common/validate_return_addr.h
    unwind/generic-libunwind/_unw-datatypes.h
    unwind/generic-libunwind/libunw-unwind.c
    unwind/mips/_unw-datatypes.h
    unwind/mips/mips-unwind-cfg.h
    unwind/mips/mips-unwind-interval.c
    unwind/mips/mips-unwind-interval.h
    unwind/mips/mips-unwind.c
    unwind/ppc64/_unw-datatypes.h
    unwind/ppc64/ppc64-unwind-interval.c
    unwind/ppc64/ppc64-unwind-interval.h
    unwind/ppc64/ppc64-unwind.c
    unwind/x86-family/manual-intervals/x86-32bit-icc-variant.c
    unwind/x86-family/manual-intervals/x86-32bit-main.c
    unwind/x86-family/manual-intervals/x86-gcc-adjust.c
    unwind/x86-family/manual-intervals/x86-gcc-main64.c
    unwind/x86-family/manual-intervals/x86-intel-composer2013-mic.c
    unwind/x86-family/manual-intervals/x86-intel11-f90main.c
    unwind/x86-family/manual-intervals/x86-intel14-omp.c
    unwind/x86-family/manual-intervals/x86-linux-dlresolver.c
    unwind/x86-family/manual-intervals/x86-pgi-mp_pexit.c
    unwind/x86-family/_unw-datatypes.h
    unwind/x86-family/amd-xop.c
    unwind/x86-family/amd-xop.h
    unwind/x86-family/x86-addsub.c
    unwind/x86-family/x86-addsub.h
    unwind/x86-family/x86-all.c
    unwind/x86-family/x86-and.c
    unwind/x86-family/x86-and.h
    unwind/x86-family/x86-build-intervals.c
    unwind/x86-family/x86-build-intervals.h
    unwind/x86-family/x86-call.c
    unwind/x86-family/x86-call.h
    unwind/x86-family/x86-canonical.c
    unwind/x86-family/x86-canonical.h
    unwind/x86-family/x86-cold-path.c
    unwind/x86-family/x86-cold-path.h
    unwind/x86-family/x86-debug.c
    unwind/x86-family/x86-decoder.c
    unwind/x86-family/x86-decoder.h
    unwind/x86-family/x86-enter.c
    unwind/x86-family/x86-enter.h
    unwind/x86-family/x86-interval-arg.h
    unwind/x86-family/x86-interval-highwatermark.h
    unwind/x86-family/x86-jump.c
    unwind/x86-family/x86-jump.h
    unwind/x86-family/x86-lea.c
    unwind/x86-family/x86-lea.h
    unwind/x86-family/x86-leave.c
    unwind/x86-family/x86-leave.h
    unwind/x86-family/x86-libunwind.c
    unwind/x86-family/x86-libunwind.h
    unwind/x86-family/x86-move.c
    unwind/x86-family/x86-move.h
    unwind/x86-family/x86-process-inst.c
    unwind/x86-family/x86-process-inst.h
    unwind/x86-family/x86-push.c
    unwind/x86-family/x86-push.h
    unwind/x86-family/x86-return.c
    unwind/x86-family/x86-return.h
    unwind/x86-family/x86-unwind-analysis.h
    unwind/x86-family/x86-unwind-interval-fixup.c
    unwind/x86-family/x86-unwind-interval-fixup.h
    unwind/x86-family/x86-unwind-interval.c
    unwind/x86-family/x86-unwind-interval.h
    unwind/x86-family/x86-unwind-support.c
    unwind/x86-family/x86-unwind.c
    unwind/x86-family/x86-validate-retn-addr.c
    unwind/x86-family/x86-validate-retn-addr.h
    utilities/arch/catamount/_mcontext.h
    utilities/arch/ia64/_mcontext.h
    utilities/arch/ia64/ia64-context-pc.c
    utilities/arch/ia64/specific-inline-asm-gctxt.h
    utilities/arch/ppc64/_mcontext.h
    utilities/arch/ppc64/ppc64-context-pc.c
    utilities/arch/ppc64/specific-inline-asm-gctxt.h
    utilities/arch/ppc64/specific-ucontext-manip.h
    utilities/arch/x86-family/_mcontext.h
    utilities/arch/x86-family/specific-inline-asm-gctxt.h
    utilities/arch/x86-family/specific-ucontext-manip.h
    utilities/arch/x86-family/x86-context-pc.c
    utilities/arch/context-pc.h
    utilities/arch/inline-asm-gctxt.h
    utilities/arch/mcontext.h
    utilities/arch/ucontext-manip.h
    utilities/bgq-cnk/hardware-thread-id.c
    utilities/bgq-cnk/hardware-thread-id.h
    utilities/executable-path.c
    utilities/executable-path.h
    utilities/first_func.c
    utilities/ip-normalized.c
    utilities/ip-normalized.h
    utilities/last_func.c
    utilities/ppcat+ppstr.h
    utilities/token-iter.h
    utilities/tokenize.c
    utilities/tokenize.h
    utilities/unlink.c
    utilities/unlink.h
    cct2metrics.c
    cct2metrics.h
    cct_backtrace_finalize.c
    cct_backtrace_finalize.h
    cct_insert_backtrace.c
    cct_insert_backtrace.h
    closure-registry.c
    closure-registry.h
    core_profile_trace_data.h
    custom-init-dynamic.c
    custom-init-static.c
    custom-init.h
    disabled.c
    disabled.h
    env.c
    env.h
    epoch.c
    epoch.h
    event_info.h
    events.c
    events.h
    evlist.h
    files.c
    files.h
    fname_max.h
    frame.h
    handling_sample.c
    handling_sample.h
    hpcrun-initializers.c
    hpcrun-initializers.h
    hpcrun_dlfns.c
    hpcrun_dlfns.h
    hpcrun_options.c
    hpcrun_options.h
    hpcrun_return_codes.h
    hpcrun_stats.c
    hpcrun_stats.h
    hpctoolkit.c
    hpctoolkit.h
    loadmap.c
    loadmap.h
    main.c
    main.h
    memchk.h
    metrics.c
    metrics.h
    metrics_types.h
    name.c
    name.h
    rank.c
    rank.h
    safe-sampling.h
    sample_event.c
    sample_event.h
    sample_prob.c
    sample_prob.h
    sample_sources_all.c
    sample_sources_all.h
    sample_sources_registered.c
    sample_sources_registered.h
    segv_handler.c
    segv_handler.h
    start-stop.c
    start-stop.h
    stress.c
    term_handler.c
    term_handler.h
    thread_data.c
    thread_data.h
    thread_use.c
    thread_use.h
    threadmgr.c
    threadmgr.h
    trace.c
    trace.h
    unresolved.h
    vptr_add.h
    weak.c
    write_data.c
    write_data.h)

add_executable(hpcrun ${SOURCE_FILES})